[gd_scene load_steps=34 format=3 uid="uid://y2ckfosy0add"]

[ext_resource type="Script" path="res://assets/viewports/viewport.gd" id="1_lfuw6"]
[ext_resource type="Script" path="res://assets/viewports/morganucodonViewport/bone.gd" id="2_2frsw"]
[ext_resource type="ArrayMesh" uid="uid://cmb4lgock6sux" path="res://models/morganucodon/skullUpper.obj" id="2_pg44i"]
[ext_resource type="Script" path="res://assets/viewports/morganucodonViewport/jawbone.gd" id="2_q3nmt"]
[ext_resource type="ArrayMesh" uid="uid://khnxj05fuow7" path="res://models/morganucodon/lowerjaw.obj" id="3_ls26c"]
[ext_resource type="Material" uid="uid://bnu7abcg5e0s4" path="res://white.tres" id="4_fp5bu"]
[ext_resource type="Material" uid="uid://bnxnek7jc5sbr" path="res://bone.tres" id="5_q0egy"]
[ext_resource type="Script" path="res://assets/viewports/morganucodonViewport/jawbone_pointer.gd" id="6_jrlev"]
[ext_resource type="Material" uid="uid://bbrlsj4w44wc5" path="res://glow.tres" id="6_thilh"]
[ext_resource type="Material" uid="uid://cpi21yuvvgnog" path="res://redglow.tres" id="7_y3pa3"]
[ext_resource type="ArrayMesh" uid="uid://bxw3j0bsbffnd" path="res://models/morganucodon/vertabrae1.obj" id="9_m3n7v"]
[ext_resource type="ArrayMesh" uid="uid://sx0ss3lesy06" path="res://models/morganucodon/vertabrae2.obj" id="10_ghhhe"]
[ext_resource type="Script" path="res://assets/viewports/morganucodonViewport/skull_pointer.gd" id="11_8cpof"]
[ext_resource type="Script" path="res://assets/viewports/morganucodonViewport/morganucodonmap.gd" id="12_rstta"]

[sub_resource type="Animation" id="Animation_5j3tg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 216)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 432)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, 648)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 864)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1080)]
}

[sub_resource type="Animation" id="Animation_umyja"]
resource_name = "startup"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2386, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 216), Vector2(0, 216), Vector2(2386, 216)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 432), Vector2(0, 432), Vector2(0, 432), Vector2(-2386, 432)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-3, 648), Vector2(-3, 648), Vector2(-3, 648), Vector2(-3, 648), Vector2(2386, 648)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect5:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 864), Vector2(-1, 864), Vector2(-1, 864), Vector2(-1, 864), Vector2(-1, 864), Vector2(-2386, 864)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect6:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 1080), Vector2(-1, 1080), Vector2(-1, 1080), Vector2(-1, 1080), Vector2(-1, 1080), Vector2(-1, 1080), Vector2(2386, 1080.02)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1843w"]
_data = {
"RESET": SubResource("Animation_5j3tg"),
"startup": SubResource("Animation_umyja")
}

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yye36"]

[sub_resource type="Sky" id="Sky_thhtc"]
sky_material = SubResource("ProceduralSkyMaterial_yye36")

[sub_resource type="Environment" id="Environment_3pg88"]
background_mode = 2
sky = SubResource("Sky_thhtc")

[sub_resource type="BoxShape3D" id="BoxShape3D_0ggnm"]
size = Vector3(8.61, 6.10604, 0.00737744)

[sub_resource type="BoxMesh" id="BoxMesh_aoy1s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tnjha"]
transparency = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_nruu4"]

[sub_resource type="BoxMesh" id="BoxMesh_4unho"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v113g"]

[sub_resource type="BoxMesh" id="BoxMesh_prah3"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_5nqbw"]
points = PackedVector3Array(-0.0993282, 0.10813, 0.113312, 0.339053, 0.165181, 0.933142, 0.339053, 0.127183, 0.933142, -0.366196, 0.127183, 0.914149, -0.0612141, 0.413145, 1.12391, 0.0912424, -0.139834, 0.151538, -0.118385, 0.0318082, 1.06669, 0.0912424, 0.298717, 0.456749, -0.0993282, -0.139834, 0.151538, 0.0912424, -0.0063526, 0.0179855, -0.366196, 0.184289, 0.74237, -0.042157, 0.374984, 0.608937, 0.110299, 0.0127549, 1.02859, 0.0721853, 0.394038, 1.12391, 0.339053, 0.165181, 0.723496, -0.0612141, 0.146128, 1.18113, -0.0802711, -0.0635126, -0.00100803, 0.0340712, 0.146128, 0.0943183, 0.224711, 0.127183, 1.08569, 0.0531283, 0.394038, 0.74237, -0.194683, -0.0635126, 0.532963, -0.0802711, 0.22245, 0.265858, -0.118385, 0.336824, 1.16202, 0.110299, -0.120727, 0.323078, 0.319996, 0.0890223, 0.647163, -0.366196, 0.127183, 0.723496, 0.0721853, 0.298717, 1.18113, -0.251854, 0.10813, 1.06669, -0.0993282, -0.120727, 0.323078, 0.0912424, 0.146128, 0.151538, -0.0802711, 0.394038, 0.780596, -0.366196, 0.184289, 0.914149)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_emwxp"]
points = PackedVector3Array(0.180892, -0.118203, 0.294633, -0.0209063, -0.387307, -0.715676, -0.0383469, -0.354314, -0.784833, -0.257633, -0.067633, 0.277621, 0.163943, 0.0841769, -0.0258466, -0.207025, 0.101067, -0.00904594, -0.190076, -0.303694, 0.0921805, 0.180892, -0.303694, 0.0921805, 0.0459204, -0.337424, -0.784833, 0.214599, -0.0507433, 0.294633, 0.2315, -0.151933, 0.210208, -0.257633, -0.151933, 0.176501, 0.0965287, -0.371154, -0.295502, -0.17327, 0.101067, 0.0584735, 0.0628218, -0.388044, -0.717208, 0.180892, 0.0841769, 0.0247666, -0.122662, -0.354314, -0.177686, -0.190076, 0.101067, -0.0258466, -0.0552003, -0.388044, -0.666701, 0.197745, -0.135093, 0.294633, 0.0628218, -0.253123, -0.649794, -0.223879, 0.0841769, 0.0415673, -0.0552003, -0.253123, -0.649794, -0.243379, -0.120169, 0.247155, -0.0363267, -0.384716, -0.477749, 0.0628218, -0.354314, -0.717208, -0.257633, -0.0507433, 0.260821, 0.2315, -0.118203, 0.294633, -0.190076, -0.303694, 0.0584735, -0.0383469, -0.337424, -0.784833, 0.180892, -0.303694, 0.0584735, -0.156369, 0.101067, -0.0258466)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8jmu0"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_u8h0p"]
points = PackedVector3Array(-0.0338101, -0.0630074, 0.0270705, 0.0284052, 0.0261929, -0.00818961, 0.0346307, 0.0241114, 0.00216879, 0.0678373, -0.0754558, -0.0102561, -0.0379561, -0.0526404, -0.0372373, -0.0379561, 0.0178871, 0.0125532, 0.0387896, -0.00908108, 0.0270705, -0.0649373, -0.0775373, -0.0102626, 0.045002, -0.0381105, -0.0351513, -0.0338101, 0.0158158, -0.0247864, 0.0387896, -0.060936, 0.0270705, -0.0441815, -0.00700973, 0.0249975, 0.0387896, 0.0116629, -0.0247864, -0.0483275, 0.001296, -0.0164815, 0.0408561, 0.0116629, 0.0187721, 0.0221798, -0.0547016, -0.0372373, 0.0138879, -0.0650889, 0.02915, 0.0657578, -0.0505589, -0.016488, 0.0201133, 0.00959157, -0.0289324, -0.0296512, 0.0241114, -0.0185545, 0.0470815, -0.00909123, 0.0229246, 0.0470815, 0.00752021, -0.016488, -0.0109879, 0.0137444, 0.0208451, -0.0441815, -0.0401819, -0.0351513, -0.0586989, -0.0775373, -0.014415, 0.0284052, 0.0241114, -0.020634, -0.00269596, 0.0241114, 0.00840072, -0.0483275, -0.00285686, 0.0104672, -0.042102, -0.0588647, 0.0249975, 0.00559596, -0.000785511, 0.0270705, -0.0649373, -0.0671501, -0.00818961, -0.0130673, -0.0650889, 0.02915)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_56e6b"]
points = PackedVector3Array(-0.0320028, -0.0432198, 0.013722, 0.026915, 0.0310714, 0.00091754, 0.026915, 0.0310714, -0.00420577, 0.083281, -0.0637175, -0.0170028, -0.0345546, -0.0278489, -0.052881, -0.080681, -0.066281, -0.0195757, -0.0396905, 0.0259446, 0.00604085, 0.0448423, 0.00801027, -0.0426193, 0.0346028, -0.00223384, 0.0239762, -0.0422423, 0.0131371, -0.0400614, 0.0320348, -0.03552, -0.052881, 0.0371546, -0.0637175, 0.00604085, -0.0396905, -0.00479725, 0.0214108, 0.0397226, 0.0259446, 0.00859874, -0.0294348, -0.066281, 0.00604085, -0.00125187, 0.0182544, 0.0188454, 0.080713, -0.0483466, -0.0144524, -0.078113, -0.0637175, -0.0118945, 0.0448423, -0.0201586, -0.050308, 0.080713, -0.0585907, -0.00932907, -0.0217471, 0.0310714, -0.00420577, -0.080681, -0.0585907, -0.0195757, 0.0371546, 0.015691, -0.0375035, 0.0320348, -0.00992407, 0.0239762, -0.0320028, -0.03552, -0.052881, -0.0448103, -0.00992407, -0.0477426, 0.0397226, 0.0131371, 0.0188454, -0.0422423, 0.015691, 0.013722, 0.080713, -0.0637175, -0.0195757, -0.0294348, -0.00992407, 0.0239762, -0.0166273, 0.028508, 0.0111642, 0.0294669, -0.0534639, 0.0111642)

[sub_resource type="SphereMesh" id="SphereMesh_mj5qw"]

[node name="morganucodonViewport" type="Node3D"]
script = ExtResource("1_lfuw6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.683439, -0.339485, 0.646267, 2.63018e-08, 0.885288, 0.465043, -0.730007, -0.317829, 0.605041, 0, 0, 0)
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1843w")
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3pg88")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 2386.0
offset_bottom = 216.0

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = 216.0
offset_right = 2386.0
offset_bottom = 432.0

[node name="ColorRect3" type="ColorRect" parent="."]
offset_top = 432.0
offset_right = 2386.0
offset_bottom = 648.0

[node name="ColorRect4" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = 648.0
offset_right = 2383.0
offset_bottom = 864.0

[node name="ColorRect5" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = 864.0
offset_right = 2385.0
offset_bottom = 1080.0

[node name="ColorRect6" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = 1080.0
offset_right = 2385.0
offset_bottom = 1296.0

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(3.91417, 0, 0, 0, 3.15188, 0, 0, 0, 1, 1, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_0ggnm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(8.52469, 0, 0, 0, 6.07255, 0, 0, 0, 0.00921136, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_aoy1s")
surface_material_override/0 = SubResource("StandardMaterial3D_tnjha")

[node name="pivot" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.96084)
attributes = SubResource("CameraAttributesPractical_nruu4")
current = true

[node name="3dcursor" type="MeshInstance3D" parent="."]
transform = Transform3D(0.601815, 0, 0.798636, 0, 1, 0, -0.798636, 0, 0.601815, 0, 0, 1.9)

[node name="MeshInstance3D" type="MeshInstance3D" parent="3dcursor"]
transform = Transform3D(-0.0423177, 0, 9.53674e-07, 0, -0.0429383, 0, 7.45058e-09, 0, 9.1623, -1.19209e-07, 0, -3.7074)
visible = false
mesh = SubResource("BoxMesh_4unho")

[node name="RayCast3D" type="RayCast3D" parent="3dcursor"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -5, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0.980392, 0.980392, 0, 1)

[node name="Area3D" type="Area3D" parent="3dcursor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="3dcursor/Area3D"]
transform = Transform3D(1, 0, 2.08616e-07, 0, 1, 0, -2.08616e-07, 0, 1, -1.19209e-07, 0, -5.10505)
shape = SubResource("SphereShape3D_v113g")
disabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.0835213, 0.996506, 0, -0.996506, -0.0835213, 0, 3.70391, 0)

[node name="point" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 1, 1, 1)
mesh = SubResource("BoxMesh_prah3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.798635, 0, 0.601815, 0, 1, 0, -0.601815, 0, 0.798635, -0.702502, 0, 1.87037)
visible = false
mesh = SubResource("BoxMesh_prah3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.921606, -0.388127, 0, 0.388127, 0.921606, 0, 0.621839, 1.78498)
visible = false
mesh = SubResource("BoxMesh_prah3")

[node name="skull" type="Marker3D" parent="."]
script = ExtResource("2_2frsw")

[node name="length" type="Label" parent="skull"]
offset_right = 40.0
offset_bottom = 26.0
text = "1.1"

[node name="target" type="Label" parent="skull"]
offset_right = 85.0
offset_bottom = 26.0
text = "skull_pointer"

[node name="MeshInstance3D" type="MeshInstance3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0919293, -1.05231)
mesh = ExtResource("2_pg44i")
surface_material_override/0 = ExtResource("4_fp5bu")
surface_material_override/1 = ExtResource("5_q0egy")

[node name="hoverglow" type="MeshInstance3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0919293, -1.05231)
visible = false
mesh = ExtResource("2_pg44i")
surface_material_override/0 = ExtResource("4_fp5bu")
surface_material_override/1 = ExtResource("6_thilh")

[node name="selectglow" type="MeshInstance3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0919293, -1.05231)
visible = false
mesh = ExtResource("2_pg44i")
surface_material_override/0 = ExtResource("4_fp5bu")
surface_material_override/1 = ExtResource("7_y3pa3")

[node name="master" type="Label" parent="skull"]
offset_right = 40.0
offset_bottom = 23.0
text = "vertabrae1"

[node name="mousesense" type="Area3D" parent="skull"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.178345)

[node name="CollisionShape3D" type="CollisionShape3D" parent="skull/mousesense"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0919293, -0.873962)
shape = SubResource("ConvexPolygonShape3D_5nqbw")

[node name="jawbone" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.986095, 0.166184, 0, -0.166184, 0.986095, 0, 0, 0)
visible = false
script = ExtResource("2_q3nmt")

[node name="Area3D" type="Area3D" parent="jawbone"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="jawbone/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0329632, -0.045497)
mesh = ExtResource("3_ls26c")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("4_fp5bu")
surface_material_override/1 = ExtResource("5_q0egy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="jawbone/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0329632, -0.045497)
shape = SubResource("ConvexPolygonShape3D_emwxp")
disabled = true

[node name="clicked" type="MeshInstance3D" parent="jawbone/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0329632, -0.045497)
visible = false
mesh = ExtResource("3_ls26c")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("4_fp5bu")
surface_material_override/1 = SubResource("StandardMaterial3D_8jmu0")

[node name="jawbone_pointer" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.18468)
visible = false
script = ExtResource("6_jrlev")

[node name="vertabrae1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0113323, 0.319079)
script = ExtResource("2_2frsw")

[node name="target" type="Label" parent="vertabrae1"]
offset_right = 85.0
offset_bottom = 26.0
text = "skull"

[node name="master" type="Label" parent="vertabrae1"]
offset_right = 85.0
offset_bottom = 26.0
text = "vertabrae2"

[node name="MeshInstance3D" type="MeshInstance3D" parent="vertabrae1"]
mesh = ExtResource("9_m3n7v")
surface_material_override/0 = ExtResource("5_q0egy")

[node name="hoverglow" type="MeshInstance3D" parent="vertabrae1"]
visible = false
mesh = ExtResource("9_m3n7v")
surface_material_override/0 = ExtResource("6_thilh")

[node name="selectglow" type="MeshInstance3D" parent="vertabrae1"]
visible = false
mesh = ExtResource("9_m3n7v")
surface_material_override/0 = ExtResource("7_y3pa3")

[node name="length" type="Label" parent="vertabrae1"]
offset_right = 40.0
offset_bottom = 23.0
text = "0.15"

[node name="mousesense" type="Area3D" parent="vertabrae1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="vertabrae1/mousesense"]
shape = SubResource("ConvexPolygonShape3D_u8h0p")

[node name="vertabrae2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00366859, 0.461922)
script = ExtResource("2_2frsw")

[node name="length" type="Label" parent="vertabrae2"]
offset_right = 40.0
offset_bottom = 26.0
text = "0.15"

[node name="target" type="Label" parent="vertabrae2"]
offset_right = 40.0
offset_bottom = 23.0
text = "vertabrae1"

[node name="master" type="Label" parent="vertabrae2"]
offset_right = 85.0
offset_bottom = 26.0
text = "anchor"

[node name="MeshInstance3D" type="MeshInstance3D" parent="vertabrae2"]
mesh = ExtResource("10_ghhhe")
surface_material_override/0 = ExtResource("5_q0egy")

[node name="hoverglow" type="MeshInstance3D" parent="vertabrae2"]
visible = false
mesh = ExtResource("10_ghhhe")
surface_material_override/0 = ExtResource("6_thilh")

[node name="selectglow" type="MeshInstance3D" parent="vertabrae2"]
visible = false
mesh = ExtResource("10_ghhhe")
surface_material_override/0 = ExtResource("7_y3pa3")

[node name="mousesense" type="Area3D" parent="vertabrae2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="vertabrae2/mousesense"]
shape = SubResource("ConvexPolygonShape3D_56e6b")

[node name="anchor" type="Marker3D" parent="."]

[node name="length" type="Label" parent="anchor"]
offset_right = 40.0
offset_bottom = 23.0
text = "0.1"

[node name="skull_pointer" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.20531)
script = ExtResource("11_8cpof")

[node name="MeshInstance3D" type="MeshInstance3D" parent="skull_pointer"]
transform = Transform3D(0.264249, 0, 0, 0, 0.264249, 0, 0, 0, 0.264249, 0, 0, 0)
mesh = SubResource("SphereMesh_mj5qw")
skeleton = NodePath("../..")

[node name="master" type="Label" parent="skull_pointer"]
offset_right = 40.0
offset_bottom = 23.0
text = "skull"

[node name="map" type="Marker3D" parent="."]
script = ExtResource("12_rstta")

[connection signal="clearHover" from="." to="skull" method="_on_morganucodon_viewport_clear_hover"]
[connection signal="clearHover" from="." to="vertabrae1" method="_on_morganucodon_viewport_clear_hover"]
[connection signal="clearHover" from="." to="vertabrae2" method="_on_morganucodon_viewport_clear_hover"]
[connection signal="hovered" from="skull" to="." method="bonehovered"]
[connection signal="selected" from="skull" to="." method="boneselected"]
[connection signal="mouse_entered" from="skull/mousesense" to="skull" method="_on_mousesense_mouse_entered"]
[connection signal="mouse_exited" from="skull/mousesense" to="skull" method="_on_mousesense_mouse_exited"]
[connection signal="select" from="jawbone" to="jawbone_pointer" method="_on_jawbone_select"]
[connection signal="mouse_entered" from="jawbone/Area3D" to="jawbone" method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="jawbone/Area3D" to="jawbone" method="_on_area_3d_mouse_exited"]
[connection signal="hovered" from="vertabrae1" to="." method="bonehovered"]
[connection signal="selected" from="vertabrae1" to="." method="boneselected"]
[connection signal="mouse_entered" from="vertabrae1/mousesense" to="vertabrae1" method="_on_mousesense_mouse_entered"]
[connection signal="mouse_exited" from="vertabrae1/mousesense" to="vertabrae1" method="_on_mousesense_mouse_exited"]
[connection signal="hovered" from="vertabrae2" to="." method="bonehovered"]
[connection signal="selected" from="vertabrae2" to="." method="boneselected"]
[connection signal="mouse_entered" from="vertabrae2/mousesense" to="vertabrae2" method="_on_mousesense_mouse_entered"]
[connection signal="mouse_exited" from="vertabrae2/mousesense" to="vertabrae2" method="_on_mousesense_mouse_exited"]
